[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iwinfo"
dynamic = ["version"]
description = "iwinfo : Provides information about wireless network(s)"
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "MIT"
readme = "README.rst"
keywords = []
classifiers = [ 
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: C",
    "Programming Language :: Python :: 3.11",
]
dependencies = []
[tool.hatch.build.targets.wheel]
packages = ["src/iwinfo"]
include = [
    "src/iwinfo",
]


[project.urls]
#Documentation = "https://github.com/gene-git/iwinfo/Docs"
#Issues = "https://github.com/gene-git/iwinfo/issues"
#Source = "https://github.com/gene-git/iwinfo"

[tool.hatch.version]
path = "src/iwinfo/__about__.py"

[[tool.hatch.envs.all.matrix]]
python = ["3.12", "3.13", "3.14"]

[tool.mypy]
check_untyped_defs = true
follow_untyped_imports = true
mypy_path = "src/iwinfo/stubs"

